feat: [wip] timed text and polly text2speech working; css needs work

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -12,5 +12,12 @@
       "service": "S3",
       "providerPlugin": "awscloudformation"
     }
+  },
+  "predictions": {
+    "narrator": {
+      "providerPlugin": "awscloudformation",
+      "service": "Polly",
+      "convertType": "speechGenerator"
+    }
   }
 }
